--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 		<javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
 	</properties>
   	<dependencies>
+	  	<dependency>
+	      <groupId>com.opencsv</groupId>
+	      <artifactId>opencsv</artifactId>
+	      <version>5.3</version>
+	  	</dependency>
 		<dependency>
 			<groupId>com.sothawo</groupId>
 			<artifactId>mapjfx</artifactId>
