--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.6</version>
 				<configuration>
-					<mainClass>com.dashboard.components.graphs.TestGraphics</mainClass>
+					<mainClass>com.dashboard.main.Main</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
